# sauron

./: .gitignore  CMakeLists.txt  FindEigen3.cmake  FindLibMesh.cmake  README.md  SauronApp.C  run_tests.sh
.github/workflows/: ci.yaml
include/: Logo.h  Mesh.h  MiddleEarth.h  NumCornerNodes.h  Point.h  Ray.h  Solver.h  Solvers.h  Vector.h  material.h  mesh.h  physics_engine.h  surface.h
src/: CMakeLists.txt  Mesh.C  Mesh.cpp  MiddleEarth.C  MiddleEarth.cpp  Point.C  Point.cpp  Ray.C  Ray.cpp  Solver.C  Solver.cpp  Vector.C  main.C  material.C  physics_engine.C
test/: CMakeLists.txt  Test.C  test_mesh.cpp  test_point.cpp  test_ray_intersetion.cpp  test_track_length.cpp  test_travel_inside_one_element.cpp
